--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -1,26 +1,31 @@
-@misc{cloudkitchens,
-  author = {CloudKitchens},
-  title = {Multi-channel, multi-location menu management},
-  year = {2024},
-  month = {September},
-  day = {16},
-  url  = {https://techblog.cloudkitchens.com/p/multi-channel-multi-location-menu},
-  note = {Accessed: 2025-05-05}
-}
-}
-
-@misc{nypl2016menu,
-  author       = {New York Public Library},
-  title        = {What's on the Menu?},
-  year         = {2016},
-  howpublished = {\url{https://www.kaggle.com/datasets/nypl/whats-on-the-menu}},
-  note         = {Accessed: 2025-05-06}
-}
-
 @misc{sakib2023ubereats,
   author       = {Ahmed Shahriar Sakib},
-  title        = {Uber Eats USA restaurants & menus},
-  year         = {2024},
+  title        = {Uber Eats USA Restaurants and Menus},
+  year         = {2023},
   howpublished = {\url{https://www.kaggle.com/datasets/ahmedshahriarsakib/uber-eats-usa-restaurants-menus}},
-  note         = {Accessed: 2025-05-06}
+  note         = {Dataset, Kaggle}
+}
+
+@misc{keshetti2020popularity,
+  author       = {Keshetti Sreekala},
+  title        = {Popularity-Based Recommendation System},
+  year         = {2020},
+  howpublished = {\url{https://www.researchgate.net/publication/355773477}},
+  note         = {ResearchGate}
+}
+
+@misc{chitalia2023yelp,
+  author       = {Chitalia, A.},
+  title        = {Yelp Popularity Score Calculator},
+  year         = {2023},
+  howpublished = {\url{https://scholarworks.sjsu.edu/etd_projects/1261}},
+  note         = {San José State University}
+}
+
+@article{alrubaye2020github,
+  author       = {Al-Rubaye, S. and Sukthankar, G.},
+  title        = {Popularity-Based Ranking of GitHub Repositories},
+  journal      = {IEEE},
+  year         = {2020},
+  url          = {https://ieeexplore.ieee.org/document/9458206}
 }
